# WordCards

./: .gitignore  history.db  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  words.db
public/: index.html  main.js  style.css
public/static/css/: style.css
public/static/js/: main.js
src/: index.ts
src/card_server/: Cargo.toml  words.db
src/card_server/src/: main.rs
ui_html/: index.html
ui_html/static/css/: style.css
ui_html/static/js/: main.js
